[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/Skills/Fire_sprite.png" type="Texture" id=1]
[ext_resource path="res://Entities/Skills/Spell.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 5.15918
height = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 28, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 28, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 28, 14 )

[sub_resource type="SpriteFrames" id=5]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Fire",
"speed": 6.0
} ]

[sub_resource type="Gradient" id=6]
resource_local_to_scene = true
offsets = PoolRealArray( 0.004329, 1 )
colors = PoolColorArray( 0.526855, 0, 0, 1, 0.97998, 0.080389, 0.080389, 0.78 )

[sub_resource type="GradientTexture" id=7]
resource_local_to_scene = true
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.251969, 0.986364 ), 0.0, 0.0, 0, 0, Vector2( 0.984252, 0.304545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
resource_local_to_scene = true
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.00393701, 6.81818 ), 0.0, 0.0, 0, 0, Vector2( 0.992126, -25.9091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 3.5, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 90, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel_curve = SubResource( 11 )
damping = 20.74
angle = 720.0
angle_random = 1.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[node name="Spell" type="RigidBody2D"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
collision_layer = 0
collision_mask = 5
script = ExtResource( 2 )
speed = 20
max_distance = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 15, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -7 )
scale = Vector2( 0.561215, 1 )
frames = SubResource( 5 )
animation = "Fire"
frame = 2
playing = true
centered = false

[node name="HitPosition" type="Position2D" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 0.561215, 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 13, 0 )
rotation = 1.5708
amount = 200
preprocess = 0.5
process_material = SubResource( 12 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 14, 5.96046e-08 )
scale = Vector2( 0.563785, 0.526996 )
[connection signal="body_entered" from="." to="." method="_on_Spell_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
